--- a/.gitignore
+++ b/.gitignore
@@ -272,6 +272,7 @@ local.properties
 *.config
 *.creator
 *.creator.user
+*.files
 
 ###############################################
 # Visual Studio
